# distributed-task-scheduler

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose.yml  manage.py  pyproject.toml
core/: admin.py  models.py  serializer.py  signals.py  tasks.py  urls.py  views.py
core/migrations/: 0001_initial.py
distributed_task_scheduler/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
